atag link fixed added z-index 100 to left header

--- a/src/Header.css
+++ b/src/Header.css
@@ -43,6 +43,7 @@
 .header-left {
     justify-self: start;
     font-size: 0.6rem;
+    z-index: 100;
 }
 
 .header-right{
